<resources>

    <string name="app_name">Bill Ping</string>

    <!--All Menu Strings-->
    <string name="menus">Menu</string>
    <string name="menus_Reminders">Reminders</string>
    <string name="menus_Invoices">Invoices</string>
    <string name="mainMenu_User">Preferences</string>
    <string name="menus_Delete">Delete</string>
    <string name="menus_Update">Update</string>
    <string name="menus_Home">Home</string>
    <string name="calendar_menu_AddReminder">Add Reminder</string>
    <string name="calendar_menu_ViewCalendar">View Calendar</string>
    <string name="invoice_menu_AddInvoice">Add Invoice</string>

    <!--welcome.XML Strings-->
    <string name="welcome_message">Thank you for Choosing Bill Ping! \n\nThis app allows you
    to view a list of all your invoices and calendar events. Each page within the app has different
    menu options allowing you to add, update, and delete invoices and reminders.</string>
    <string name="WelcomeButton">Begin</string>

    <!--Login.XML Strings-->
    <string name="login_Welcome">Welcome to Bill Ping Please enter your name.</string>
    <string name="login_Hint">Enter your name Here</string>
    <string name="login_button">Save Name</string>

    <!--Calendar_home.xml and calendar_list_row.xml Strings-->
    <string name="Separator">Separator</string>
    <!--^^Also used in invoice_list as the separator-->
    <string name="calendar_list_row_hyphen"> \u0020-\u0020 </string>

    <!--enter_invoice.xml Strings-->
    <string name="enter_invoice_InvoiceCompanyName">Company Name</string>
    <string name="enter_invoice_CompanyNameHint">ex: Verizon</string>
    <string name="enter_invoice_DatePaid">Paid date</string>
    <string name="enter_invoice_DateHint">Click for Date</string>
    <string name="enter_invoice_InvoiceNumber">Invoice Number</string>
    <string name="enter_invoice_InvoiceNumberHint">ex: 25004</string>
    <string name="enter_invoice_InvoiceAmountPaid">Amount paid</string>
    <string name="enter_invoice_AmountHint">ex: 140.45</string>
    <string name="enter_invoice_AddInvoiceButtonText">Add Invoice</string>
    <string name="enter_invoice_viewAllInvoicesButtonText">View All Invoices</string>

    <!--invoice_detail_view.xml Strings-->
    <string name="detailCompanyTitle">Company:</string>
    <string name="detailDatePaidTitle">Date Paid:</string>
    <string name="detailPaidAmountTitle">Amound paid:</string>
    <string name="detailInvoiceNumberTitle">Invoice Number:</string>
    <string name="invoice_detail_view_Message">Invoice Details:</string>

    <!--invoice_list_row.xml Strings-->
    <string name="invoice_list_row_CompanyTitle">Company:</string>
    <string name="invoice_list_row_DatePaidTitle">Date Paid:</string>
    <string name="invoice_list_row_AmountPaidTitle">Amount Paid:</string>
    <string name="invoice_list_row_InvoiceNumberTitle">Invoice Number:</string>

    <!--reminder_detail_view.xml Strings-->
    <string name="reminder_detail_view_StartTimeTitle">Start Time: \u0020</string>
    <string name="reminder_detail_view_EndTimeTitle">End Time: \u0020</string>
    <string name="reminder_detail_view_DescriptionText">Description:</string>

</resources>
