<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Created for the invoice list view screen so users can add an invoice, show reminders list,
    or go back to the home screen-->

    <item android:id="@+id/mainMenuMenu"
        android:title="@string/menus"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>

            <item android:id="@+id/Add_Invoice"
                android:title="@string/invoice_menu_AddInvoice"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/invoiceShowReminders"
                android:title="@string/menus_Reminders"
                android:orderInCategory="2"
                app:showAsAction="never"/>

            <item android:id="@+id/invoiceToHome"
                android:title="@string/menus_Home"
                android:orderInCategory="3"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>