<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--Created a sub-menu on all my menu items in order to start with "Menu" for a better display
    effect.From the home page, users will be able to navigate to the Reminders, Invoices, and
    username Pages by clicking on the below menu items-->

    <item android:id="@+id/mainMenuMenu"
        android:title="@string/menus"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>

            <item android:id="@+id/menu_main_ViewCalendarEvents"
                android:title="@string/menus_Reminders"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_main_ViewInvoices"
                android:title="@string/menus_Invoices"
                android:orderInCategory="2"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_main_UpdateUserName"
                android:title="@string/mainMenu_User"
                android:orderInCategory="3"
                app:showAsAction="never"/>
        </menu>

    </item>

</menu>