<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Menu for the invoice details screen that gives users option to delete or update the invoice-->

    <item android:id="@+id/mainMenuMenu"
        android:title="@string/menus"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>

            <item android:id="@+id/deleteInvoiceMenu"
                android:title = "@string/menus_Delete"
                android:orderInCategory="1"
                app:showAsAction="never"/>

            <item android:id="@+id/update_invoice"
                android:title="@string/menus_Update"
                android:orderInCategory="2"
                app:showAsAction="never"/>

            </menu>

    </item>

</menu>