<?xml version="1.0" encoding="utf-8"?>

<!--This is the layout file for the Enter_Invoice class. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--The structure of this layout file has a TextView in each row followed by an EditText to the
right of each TextView. The edit text takes in the users input and adds it to the database through
the use of the Add Invoice button.-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:touchscreenBlocksFocus="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_invoice_CompanyViewTitle"
                android:layout_column="0"
                android:layout_marginBottom="10dp"
                android:singleLine="true"
                android:text="@string/enter_invoice_InvoiceCompanyName" />

            <EditText
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_invoice_CompanyEditText"
                android:hint="@string/enter_invoice_CompanyNameHint"
                android:textColorHint="@color/hintText"
                android:layout_column="1"
                android:layout_marginLeft="50dp"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_invoice_DatePaid"
                android:id="@+id/enter_invoice_PaidDateTitle"
                android:layout_column="0"
                android:layout_marginBottom="10dp" />

            <EditText
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/enter_invoice_PaidDateEditText"
                android:hint="@string/enter_invoice_DateHint"
                android:textColorHint="@color/hintText"
                android:layout_column="1"
                android:layout_marginLeft="50dp"
                android:focusable="false"
                android:inputType="date"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_invoice_InvoiceNumber"
                android:id="@+id/enter_invoice_InvoiceNumberTitle"
                android:layout_column="0"
                android:layout_marginBottom="10dp" />

            <EditText
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_invoice_InvoiceNumberEditText"
                android:hint="@string/enter_invoice_InvoiceNumberHint"
                android:textColorHint="@color/hintText"
                android:layout_column="1"
                android:layout_marginLeft="50dp"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_invoice_InvoiceAmountPaidTitle"
                android:text="@string/enter_invoice_InvoiceAmountPaid"
                android:layout_marginBottom="10dp" />

            <EditText
                style="@style/AppText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/enter_invoice_AmountPaidEditText"
                android:hint="@string/enter_invoice_AmountHint"
                android:textColorHint="@color/hintText"
                android:layout_marginLeft="50dp"
                android:layout_column="1" />
        </TableRow>
    </TableLayout>

    <!-- The below layouts are used to organize the three main buttons in the file. There is an add
    invoice button, remove invoice button, and View All Invoices button. The Add invoice adds all
    the user entered text fields to the database in an organized fashion based off the arguments
    layed out in the InvoiceList.java class. -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical|center_horizontal">

        <Button
            style="@style/AppText"
            android:background="@drawable/buttonshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_invoice_AddInvoiceButtonText"
            android:textAllCaps="false"
            android:id="@+id/enter_invoice_AddInvoiceButton"
            android:layout_marginRight="5dp" />

        <!--This button has no functionality at this time but will in the future.-->
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            style="@style/AppText"
            android:background="@drawable/buttonshape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_invoice_viewAllInvoicesButtonText"
            android:textAllCaps="false"
            android:id="@+id/enter_invoice_ViewAllInvoicesButton"/>
    </LinearLayout>

</LinearLayout>